by tads - thats all

--- a/pages/index.html
+++ b/pages/index.html
@@ -52,7 +52,7 @@
             </td>
 
             <td rowspan="6">
-                c
+                con
             </td>
 
         </tr>
@@ -77,7 +77,6 @@
                 </table>
             </td>
             <td colspan="2" rowspan="2" style="background-color: yellow;"> content </td>
-
         </tr>
 
         <tr>
@@ -85,7 +84,6 @@
 
         <!--third line-->
         <tr>
-            
             <td rowspan="3"> content </td>
             <td rowspan="2"> content </td>
             <td rowspan="2"> content </td>
