+ css on 2th pages

--- a/pages/index.html
+++ b/pages/index.html
@@ -117,6 +117,7 @@
         </tr>
     </table>
     <br>
+    <p style="font-size: 2rem;">Далее начался совершенный ад с этими таблицами</p>
 
 
 </body>
