added a lot of things

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,8 +14,10 @@
 
 <div>
     <ol>
-        <li><a href="../pages/index.html" target="_parent">Piet Mondriaan's table by TAGs without CSS </a></li>
-        <li><a href="../pages/second.html" target="_blank">Piet Mondriaan's table with CSS </a></li>
+        <li><a href="../pages/index.html" target="_parent">Mondriaan table by TAGs without CSS </a></li>
+        <li><a href="../pages/second.html" target="_blank">Mondriaan table with CSS </a></li>
+        <li><a href="../pages/third.html" target="_blank">Mondriaan table by TAGs - v.2</a></li>
+        <li><a href="../pages/fourth.html" target="_blank">Mondriaan table with CSS - v.2</a></li>
     </ol>
 </div>
 <br>
@@ -24,102 +26,105 @@
 
 
 <body style="background-color: azure;">
-    <table border="4" cellspacing="0" cellpadding="5">
 
-        <!--first line-->
+    <div>
+        <table border="4" cellspacing="0" cellpadding="5">
 
-        <tr>
-            <td colspan="2">
-                <table>
-                    <td>content</td>
-                    <td>content</td>
-                </table>
-            </td>
+            <!--first line-->
 
-            <td colspan="3">
-                <table>
-                    <td>content</td>
-                    <td>content</td>
-                    <td>content</td>
-                </table>
-            </td>
+            <tr>
+                <td colspan="2">
+                    <table>
+                        <td>content</td>
+                        <td>content</td>
+                    </table>
+                </td>
 
-            <td colspan="2" style="background-color: yellow;">
-                <table>
-                    <td>content</td>
-                    <td>content</td>
-                </table>
-            </td>
+                <td colspan="3">
+                    <table>
+                        <td>content</td>
+                        <td>content</td>
+                        <td>content</td>
+                    </table>
+                </td>
 
-            <td rowspan="6">
-                con
-            </td>
+                <td colspan="2" style="background-color: yellow;">
+                    <table>
+                        <td>content</td>
+                        <td>content</td>
+                    </table>
+                </td>
 
-        </tr>
+                <td rowspan="6">
+                    con
+                </td>
 
-        <!--second line-->
+            </tr>
 
-        <tr>
-            <td rowspan="2">
-                <table>
-                    <td> content </td>
-                </table>
-                <table>
-                    <td> content </td>
-                </table>
-            </td>
-            <td colspan="4" rowspan="4" style="background-color: red;">
-                <table>
-                    <td> content </td>
-                    <td> content </td>
-                    <td> content </td>
-                    <td> content </td>
-                </table>
-            </td>
-            <td colspan="2" rowspan="2" style="background-color: yellow;"> content </td>
-        </tr>
+            <!--second line-->
 
-        <tr>
-        </tr>
+            <tr>
+                <td rowspan="2">
+                    <table>
+                        <td> content </td>
+                    </table>
+                    <table>
+                        <td> content </td>
+                    </table>
+                </td>
+                <td colspan="4" rowspan="4" style="background-color: red;">
+                    <table>
+                        <td> content </td>
+                        <td> content </td>
+                        <td> content </td>
+                        <td> content </td>
+                    </table>
+                </td>
+                <td colspan="2" rowspan="2" style="background-color: yellow;"> content </td>
+            </tr>
 
-        <!--third line-->
-        <tr>
-            <td rowspan="3"> content </td>
-            <td rowspan="2"> content </td>
-            <td rowspan="2"> content </td>
-            <td> c </td>
+            <tr>
+            </tr>
 
-        </tr>
+            <!--third line-->
+            <tr>
+                <td rowspan="3"> content </td>
+                <td rowspan="2"> content </td>
+                <td rowspan="2"> content </td>
+                <td> c </td>
 
-        <!--fourth line-->
+            </tr>
 
-        <tr>
-            <td> content </td>
-        </tr>
+            <!--fourth line-->
 
-        <!--fifth line-->
+            <tr>
+                <td> content </td>
+            </tr>
 
-        <tr>
-            <td> content </td>
-            <td> content </td>
-            <td> content </td>
-            <td> content </td>
-            <td> </td>
-            <td> </td>
-        </tr>
-        <tr>
-            <td> content </td>
-            <td> content </td>
-            <td> content </td>
-            <td> content </td>
-            <td> </td>
-            <td> </td>
-        </tr>
-    </table>
-    <br>
-    <p style="font-size: 2rem;">Далее начался совершенный ад с этими таблицами</p>
+            <!--fifth line-->
 
+            <tr>
+                <td> content </td>
+                <td> content </td>
+                <td> content </td>
+                <td> content </td>
+                <td> </td>
+                <td> </td>
+            </tr>
+            <tr>
+                <td> content </td>
+                <td> content </td>
+                <td> content </td>
+                <td> content </td>
+                <td> </td>
+                <td> </td>
+            </tr>
+        </table>
+        <br>
+        <p style="font-size: 2rem;">Далее начался совершенный ад с этими таблицами</p>
+    </div>   
 
+   
 </body>
 
 </html>
