--- a/pages/second.html
+++ b/pages/second.html
@@ -11,8 +11,10 @@
 
 <div>
     <ol>
-        <li><a href="../pages/index.html" target="_parent">Piet Mondriaan's table by TAGs without CSS </a></li>
-        <li><a href="../pages/second.html" target="_parent">Piet Mondriaan's table with CSS </a></li>
+        <li><a href="../pages/index.html" target="_parent">Mondriaan table by TAGs without CSS </a></li>
+        <li><a href="../pages/second.html" target="_blank">Mondriaan table with CSS </a></li>
+        <li><a href="../pages/third.html" target="_blank">Mondriaan table by TAGs - v.2</a></li>
+        <li><a href="../pages/fourth.html" target="_blank">Mondriaan table with CSS - v.2</a></li>
     </ol>
 </div>
 <br>
@@ -22,49 +24,48 @@
 
     <table class="styled-table">
         <tr>
-          <td>Комірка 1</td>
-          <td>Комірка 2</td>
-          <td>Комірка 2</td>
-          <td>Комірка 2</td>
-          <td>Комірка 2</td>
+          <td class="td-first"></td>
+          <td class="td-first-two"></td>
+          <td class="td-first-three"></td>
+          <td class="td-first-four"></td>
 
         </tr>
         <tr>
-          <td>Комірка 3</td>
-          <td>Комірка 4</td>
-          <td>Комірка 3</td>
-          <td>Комірка 4</td>
-          <td>Комірка 3</td>
+          <td>Ком</td>
+          <td>Ком</td>
+          <td>Ком</td>
+          <td>Ком</td>
+          <td>Ком</td>
         </tr>
         <tr>
-            <td>Комірка 1</td>
-            <td>Комірка 2</td>
-            <td>Комірка 2</td>
-            <td>Комірка 2</td>
-            <td>Комірка 2</td>
+            <td>Ком</td>
+            <td>Ком</td>
+            <td>Ком</td>
+            <td>Ком</td>
+            <td>Ком</td>
   
           </tr>
           <tr>
-            <td>Комірка 3</td>
-            <td>Комірка 4</td>
-            <td>Комірка 3</td>
-            <td>Комірка 4</td>
-            <td>Комірка 3</td>
+            <td>Ком</td>
+            <td>Ком</td>
+            <td>Ком</td>
+            <td>Ком</td>
+            <td>Ком</td>
           </tr>
           <tr>
-            <td>Комірка 1</td>
-            <td>Комірка 2</td>
-            <td>Комірка 2</td>
-            <td>Комірка 2</td>
-            <td>Комірка 2</td>
+            <td>Ком</td>
+          <td>Ком</td>
+          <td>Ком</td>
+          <td>Ком</td>
+          <td>Ком</td>
   
           </tr>
           <tr>
-            <td>Комірка 3</td>
-            <td>Комірка 4</td>
-            <td>Комірка 3</td>
-            <td>Комірка 4</td>
-            <td>Комірка 3</td>
+            <td>Ком</td>
+            <td>Ком</td>
+            <td>Ком</td>
+            <td>Ком</td>
+            <td>Ком</td>
           </tr>
       </table>
      
