--- a/pages/third.html
+++ b/pages/third.html
@@ -18,20 +18,20 @@
     </ol>
 </div>
 
-<body>
+<body style="background-color: beige;">
 
     <div>
-        <table border="3px" cellpadding="3" cellspacing="0" width="800px" height="800px">
+        <table border="3px" cellpadding="5px" cellspacing="0" width="800px" height="800px">
             <caption> Mondrian table</caption>
-            <tr> <th colspan="2">1</th>  <th colspan="3">3</th>  <th colspan="2" style="background-color: yellow;">6</th>  <th>8</th> </tr>
-            <tr> <td rowspan="2">1</td>  <td colspan="4" rowspan="4" style="background-color: red;">2</td>  <td colspan="2" rowspan="2" style="background-color: yellow;">6</td>  <td rowspan="">8</td> </tr>
-            <tr> <td>8</td> </tr>
-            <tr> <td rowspan="3">1</td>  <td rowspan="2">6</td>  <td rowspan="2">7</td>  <td>8</td> </tr>
-            <tr>             <td>8</td> </tr>
-            <tr>             <td colspan="2" rowspan="2">2</td>  <td colspan="2">4</td>  <td colspan="2">6</td>  <td>8</td> </tr>
-            <tr> <td rowspan="3">1</td>  <td colspan="2">4</td>  <td colspan="2" rowspan="2">6</td>  <td>8</td> </tr>
-            <tr>             <td colspan="2" rowspan="2">2</td>   <td colspan="2">4</td>  <td>8</td> </tr>
-            <tr>             <td colspan="4">4</td>   <td>8</td> </tr>
+            <tr height="100" width="100"> <th colspan="2" >1</th>  <th colspan="3">3</th>  <th colspan="2" style="background-color: yellow;">6</th>  <th rowspan="6">8</th> </tr>
+            <tr 2> <td rowspan="2">1</td>  <td colspan="4" rowspan="4" style="background-color: red;">2</td>  <td colspan="2" rowspan="2" style="background-color: yellow;">6</td> </tr>
+            <tr 3>  </tr>
+            <tr 4> <td rowspan="3">1</td>  <td rowspan="2">6</td>  <td rowspan="2">7</td>  </tr>
+            <tr 5>            </tr>
+            <tr 6>             <td colspan="2" rowspan="2" style="background-color: black;">2</td>  <td colspan="2">4</td>  <td colspan="2">6</td>  </tr>
+            <tr 7> <td rowspan="3" style="background-color: yellow;">1</td>  <td colspan="2">4</td>  <td colspan="2" rowspan="2" style="background-color: blue;">6</td>  <td rowspan="3" style="background-color: red;">8</td> </tr>
+            <tr 8>             <td colspan="2" rowspan="2">2</td>   <td colspan="2" style="background-color: black;">4</td> </tr>
+            <tr 9>             <td colspan="4">4</td>  </tr>
 
         </table>
     </div>
