--- a/pages/fourth.html
+++ b/pages/fourth.html
@@ -17,6 +17,29 @@
     </ol>
 </div>
 <body>
-    
+    <main>
+        <ul>
+            <li><img src="" alt="white"></li>
+            <li><img src="" alt="white"></li>
+            <li><img src="" alt="yellow"></li>
+            <li><img src="" alt="white"></li>
+            <li><img src="" alt="white"></li>
+            <li><img src="" alt="red"></li>
+            <li><img src="" alt="yellow"></li>
+            <li><img src="" alt="white"></li>
+            <li><img src="" alt="white"></li>
+            <li><img src="" alt="white"></li>
+            <li><img src="" alt="black"></li>
+            <li><img src="" alt="white"></li>
+            <li><img src="" alt="white"></li>
+            <li><img src="" alt="yellow"></li>
+            <li><img src="" alt="white"></li>
+            <li><img src="" alt="blue"></li>
+            <li><img src="" alt="red"></li>
+            <li><img src="" alt="white"></li>
+            <li><img src="" alt="black"></li>
+            <li><img src="" alt="white"></li>
+        </ul>
+    </main>
 </body>
 </html>
