--- a/pages/third.html
+++ b/pages/third.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../two.vr.css">
     <title>Document</title>
 </head>
 <header>
-    <h1 style="font-size: 2rem;">Mondriaan table by TAGs - v.2</h1>
+    <h1 style="font-size: 2rem">Mondrian table by TAGs - v.2</h1>
 </header>
 
 <div>
