--- a/pages/index.html
+++ b/pages/index.html
@@ -16,8 +16,8 @@
     <ol>
         <li><a href="../pages/index.html" target="_parent">Mondriaan table by TAGs without CSS </a></li>
         <li><a href="../pages/second.html" target="_blank">Mondriaan table with CSS </a></li>
-        <li><a href="../pages/third.html" target="_blank">Mondriaan table by TAGs - v.2</a></li>
-        <li><a href="../pages/fourth.html" target="_blank">Mondriaan table with CSS - v.2</a></li>
+        <li><a href="../pages/third.html" target="_parent">Mondriaan table by TAGs - v.2</a></li>
+        <li><a href="../pages/fourth.html" target="_parent">Mondriaan table with CSS - v.2</a></li>
     </ol>
 </div>
 <br>
