--- a/pages/fourth.html
+++ b/pages/fourth.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../two.vr.css">
     <title>Document</title>
 </head>
 
@@ -12,16 +13,16 @@
     <ol>
         <li><a href="../pages/index.html" target="_parent">Mondriaan table by TAGs without CSS </a></li>
         <li><a href="../pages/second.html" target="_blank">Mondriaan table with CSS </a></li>
-        <li><a href="../pages/third.html" target="_blank">Mondriaan table by TAGs - v.2</a></li>
-        <li><a href="../pages/fourth.html" target="_blank">Mondriaan table with CSS - v.2</a></li>
+        <li><a href="../pages/third.html" target="_parent">Mondriaan table by TAGs - v.2</a></li>
+        <li><a href="../pages/fourth.html" target="_parent">Mondriaan table with CSS - v.2</a></li>
     </ol>
 </div>
-<body>
-    <main>
+<body class="C block-sizes">
+    <main  border="3px">
         <ul>
             <li><img src="" alt="white"></li>
+            <li><img src="" alt="bgcolor yellow"></li>
             <li><img src="" alt="white"></li>
-            <li><img src="" alt="yellow"></li>
             <li><img src="" alt="white"></li>
             <li><img src="" alt="white"></li>
             <li><img src="" alt="red"></li>
