--- a/pages/fourth.html
+++ b/pages/fourth.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../two.vr.css">
+    <link rel="stylesheet" href="../reset.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 
-<header>Mondriaan table with CSS - v.2</header>
+<header font-size="26px">Mondriaan table with CSS - v.2</header>
+<br>
+<hr>
+
+<p><b>It absolutely not my work. It was stolen by me</b></p>
+<br>
+<hr>
 
 <div>
     <ol>
@@ -17,30 +25,46 @@
         <li><a href="../pages/fourth.html" target="_parent">Mondriaan table with CSS - v.2</a></li>
     </ol>
 </div>
-<body class="C block-sizes">
-    <main  border="3px">
-        <ul>
-            <li><img src="" alt="white"></li>
-            <li><img src="" alt="bgcolor yellow"></li>
-            <li><img src="" alt="white"></li>
-            <li><img src="" alt="white"></li>
-            <li><img src="" alt="white"></li>
-            <li><img src="" alt="red"></li>
-            <li><img src="" alt="yellow"></li>
-            <li><img src="" alt="white"></li>
-            <li><img src="" alt="white"></li>
-            <li><img src="" alt="white"></li>
-            <li><img src="" alt="black"></li>
-            <li><img src="" alt="white"></li>
-            <li><img src="" alt="white"></li>
-            <li><img src="" alt="yellow"></li>
-            <li><img src="" alt="white"></li>
-            <li><img src="" alt="blue"></li>
-            <li><img src="" alt="red"></li>
-            <li><img src="" alt="white"></li>
-            <li><img src="" alt="black"></li>
-            <li><img src="" alt="white"></li>
-        </ul>
-    </main>
+
+
+
+<body>
+    <div class="main">
+        <table>
+            <tr class="row-1">
+                <td class="first-row" colspan="2"></td>
+                <td class="second-row" colspan="2"></td>
+                <td class="third-row" colspan="2"></td>
+            </tr>
+            <tr class="row-2">
+                <td class="first-row"></td>
+                <td class="second-row" rowspan="2" colspan="3"></td>
+                <td class="third-row" colspan="2"></td>
+            </tr>
+            <tr class="row-3">
+                <td class="first-row" rowspan="2"></td>
+                <td class="second-row"></td>
+                <td class="third-row"></td>
+            </tr>
+            <tr class="row-4">
+                <td class="first-row" rowspan="2" colspan="2"></td>
+                <td class="second-row"></td>
+                <td class="third-row" colspan="2"></td>
+            </tr>
+            <tr class="row-5">
+                <td class="first-row" rowspan="3"></td>
+                <td class="second-row"></td>
+                <td class="third-row" rowspan="2" colspan="2"></td>
+            </tr>
+            <tr class="row-6">
+                <td class="first-row" rowspan="2" colspan="2"></td>
+                <td class="second-row"></td>
+            </tr>
+            <tr class="row-7">
+                <td class="first-row" colspan="3"></td>
+            </tr>
+        </table>
+    </div>
 </body>
+
 </html>
