--- a/pages/fourth.html
+++ b/pages/fourth.html
@@ -13,7 +13,7 @@
 <br>
 <hr>
 
-<p><b>It absolutely not my work. It was stolen by me</b></p>
+<p><b>It absolutely not my work. It was stolen by me :)</b></p>
 <br>
 <hr>
 
