--- a/pages/second.html
+++ b/pages/second.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../main.css">
+    <link rel="stylesheet" type="text/css" href="../two.vr.css">
     <title>Table with CSS</title>
 </head>
 
@@ -20,60 +20,37 @@
         <li><a href="../pages/fourth.html" target="_parent">Mondriaan table with CSS - v.2</a></li>
     </ol>
 </div>
-<br>
+<br><hr>
+ 
+<body>
 
-<body class="body">
+    <main>
+        <ul>
+            <li><img src="../img/01.jpg" alt="yellow"></li>
+            <li><img src="../img/02.jpg" alt="yellow"></li>
+            <li><img src="../img/03.jpg" alt="yellow"></li>
+            <li><img src="../img/04.jpg" alt="yellow"></li>
+            <li><img src="../img/05.jpg" alt="yellow"></li>
+            <li><img src="../img/06.jpg" alt="yellow"></li>
+            <li><img src="../img/07.jpg" alt="yellow"></li>
+            <li><img src="../img/08.jpg" alt="yellow"></li>
+            <li><img src="../img/09.jpg" alt="yellow"></li>
+            <li><img src="../img/10.jpg" alt="yellow"></li>
+            <li><img src="../img/11.jpg" alt="yellow"></li>
+            <li><img src="../img/12.jpg" alt="yellow"></li>
+            <li><img src="../img/13.jpg" alt="yellow"></li>
+            <li><img src="../img/14.jpg" alt="yellow"></li>
+            <li><img src="../img/15.jpg" alt="yellow"></li>
+            <li><img src="../img/16.jpg" alt="yellow"></li>
+            <li><img src="../img/17.jpg" alt="yellow"></li>
+            <li><img src="../img/18.jpg" alt="yellow"></li>
+            <li><img src="../img/19.jpg" alt="yellow"></li>
+            <li><img src="../img/20.jpg" alt="yellow"></li>
 
+        </ul>
+    </main>
 
-    <table class="styled-table">
-        <tr height="50" class="tr-all">
-            <td 1 class="td-first"></td>
-            <td 2 class="td-first-two"></td>
-            <td 3 class="td-first-three"></td>
-            <td 4 class="td-first-four"></td>
-
-        </tr>
-        <tr>
-            <td 21 class="td-second"></td>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-        </tr>
-        <tr>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-
-        </tr>
-        <tr>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-        </tr>
-        <tr>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-
-        </tr>
-        <tr>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-            <td>Ком</td>
-        </tr>
-    </table>
-
-
-
+ 
 </body>
 
 </html>
